fix: change name private route
